chore: integrate gradle build system and update project configuration